aarch32: fix overloaded fmod usage with gcc6

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • None
    • Affects Version/s: port-stage-aarch32-8
    • Component/s: hotspot
    • None
    • arm
    • linux

        The following cast of fmod function pointer to address causes "overloaded function with no contextual type information" compilation error with GCC6:

        __ mov(rscratch1, (address)fmod);

        Proposed change is to cast fmod to the double version:

        __ mov(rscratch1, (address)(double (*)(double, double))fmod);

              Assignee:
              Alex Kasko (Inactive)
              Reporter:
              Alex Kasko (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: