8171913: aarch32: fix overloaded fmod usage with gcc6 Reviewed-by: enevill Contributed-by: akashche@redhat.com